5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1590_2895.log
== TEST (2019-03-20 15:41:17) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))

Total = quant * valor + frete
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:42:06) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))

Total = quant * valor + frete
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:42:08) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))

Total = quant * valor + frete
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:42:54) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))

Total = quant * valor + frete

print = (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print = (total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:04) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))

Total = quant * valor + frete

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:44) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))
Total = (quant * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:46) 
-- CODE:
quant = float(input("quantidade de jogos"))
valor = float(input("valor dos jogos"))
frete = float(input("valor do frete unitario"))
Total = (quant * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:46) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
Total = (quant * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:45:00) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
Total = (quant * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:45:15) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
Total = (quant * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:45:16) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
Total = (quant * valor) + frete
print(total)
-- EXECUTION TIME:
0.197916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:46:02) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
Total = (quant * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:46:31) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
Total = (quant * valor) + frete
prinT(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prinT(total)
NameError: name 'prinT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:46:45) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
total = (quant * valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:49:37) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
total = (quant * valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:49:46) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
total = (quant * valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:51:53) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
total = (quant * valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:53:18) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
total = (quant * valor) + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:54:03) 
-- CODE:
quant = float(input("quantidade de jogos?"))
valor = float(input("valor dos jogos?"))
frete = float(input("valor do frete unitario?"))
total = (quant * valor) + frete
print(total)
-- EXECUTION TIME:
0.139181
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
